# YetAnotherMinecraftClone

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/graphics/: camera.rs  mod.rs  model.rs  renderer.rs  resources.rs  state.rs  tempo.rs  texture.rs  window.rs
client/src/shaders/: shader.wgsl
server/: Cargo.toml
