[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
env_logger = "0.10"
rodio = "0.20.1"
wgpu = "24.0.3"
winit = { version = "0.29", features = ["rwh_05"] }
quinn = "0.11.7"
pollster = "0.4.0"
cfg-if = "1.0.0"
bytemuck = { version = "1.16", features = ["derive"] }
anyhow = "1.0.97"
cgmath = "0.18.0"
tobj = { version = "3.2", default-features = false, features = ["async"] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
